compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_segment_type_does_not_allow_size_utf16.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = <<1:utf16-size(5)>> x"
---
----- SOURCE CODE
let x = <<1:utf16-size(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:19
  │
1 │ let x = <<1:utf16-size(5)>> x
  │                   ^^^^^^^ Size cannot be specified here

Hint: utf16 segments have an automatic size.
See: https://tour.gleam.run/data-types/bit-arrays/
